# Hack-the-Tech

./: .env.example  .gitignore  .vercelignore  Makefile  README.md  next.config.mjs  package-lock.json  package.json  playwright.config.ts  requirements.txt  tailwind.config.ts  vercel.json
api/: index.py
app/: globals.css  layout.tsx  page.tsx
app/compare/: page.tsx
app/deploy-gate/: page.tsx
app/evals/: page.tsx
app/guardrails/: page.tsx
app/traces/: page.tsx
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  db.py  main.py  models.py
backend/app/deploy_gate/: gate.py
backend/app/evals/: dataset.py  metrics.py  runner.py
backend/app/guardrails/: base.py  citation.py  injection.py  jailbreak.py  pii.py  refusal.py  runner.py
backend/app/llm/: client.py  mock.py
backend/app/rag/: baseline.py  engineered.py  hyde.py  index.py  reranker.py  retrieval.py
backend/app/routers/: compare.py  deploy_gate.py  evals.py  guardrails.py  traces.py
backend/app/traces/: store.py  tracer.py
components/: site-nav.tsx  trace-card.tsx  verdict-pill.tsx
data/evals/: golden.json
data/kb/fintech/: aml-program.md  deposit-insurance.md  kyc-onboarding.md  lending-compliance.md  retirement-rules.md  sox-controls.md
data/kb/healthcare/: antibiotic-dosing.md  anticoagulation-guidelines.md  ckd-medication-dosing.md  drug-interactions.md  hipaa-overview.md  triage-protocols.md
lib/: api.ts  format.ts
scripts/: run_evals.py  seed_kb.py
tests/backend/: conftest.py  test_smoke.py
tests/playwright/: demo.spec.ts
(+5 files in other folders)
