[project]
name = "evalforge-backend"
version = "0.1.0"
description = "EvalForge engine: RAG pipelines, evals, guardrails, traces, deploy gate."
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests/backend"]

[tool.ruff]
line-length = 100
target-version = "py311"
